# demo_code

./: README.md  expmapCL.cpp  surface_interaction.cpp  surface_interaction.h
katana_tutorials/: CMakeLists.txt  CMakeLists.txt~  package.xml
katana_tutorials/include/katana_tutorials/: follow_online_trajectory.h
katana_tutorials/launch/: follow_online_trajectory.launch
katana_tutorials/src/: follow_online_trajectory.cpp
katana_tutorials/yaml/: follow_online_trajectory.yaml
widowx_torque_control_code/arbotix_ros/arbotix_python/src/arbotix_python/: arbotix.py  ax12.py  mx64.py  servo_controller.py  servos_parameters.py
widowx_torque_control_code/widowx/widowx_controller/scripts/: servos_parameters.py  widowx_position_controller.py  widowx_stiffness_matrices.py  widowx_stiffness_state_space_controller_5DOF.py
widowx_torque_control_code/widowx/widowx_driver/launch/: widowx_position_driver.launch  widowx_torque_driver.launch
widowx_torque_control_code/widowx/widowx_driver/scripts/: servos_parameters.py  widowx_position_driver.py  widowx_torque_driver.py
